syntax = "proto2";
package basic_study;

option go_package = "github.com/yincongcyincong/BasicStudy/proto/api";

import "github.com/yincongcyincong/BasicStudy/proto/api/basic_study.proto";


message mgetStudyUserByIDsReq {
  repeated uint64 ids = 1; // id
}

message mgetStudyUserByIDsData {
  map<uint64, studyUser> info = 1; // information
}